<resources>
    <string name="app_name">GW2 Leo</string>
    <string name="login_title">Enter Your API Key</string>
    <string name="login_subtitle">This application requires account, inventories, and characters permission</string>
    <string name="login_input_hint">API Key</string>
    <string name="loading_message">Loading... Please wait...</string>
    <string name="storage_gold_img">Gold</string>
    <string name="storage_silver_img">Silver</string>
    <string name="storage_copper_img">Copper</string>
    <string name="storage_img_desc">Item Image Icon</string>
    <string name="storage_not_sellable">Can\'t be sold</string>
    <string name="button_enter">Enter</string>
    <string name="button_retry">Retry</string>
    <string name="button_buy">BUY</string>
    <string name="button_sell">SELL</string>
    <string name="button_sellable">Sellable</string>
    <string name="err_missing_permission">Missing Permission</string>
    <string name="err_cancel">Operation Canceled</string>
    <string name="err_items_not_found">No items were found, please try again"</string>
    <string name="menu_bank">Bank</string>
    <string name="menu_Material">Materials</string>
    <string name="menu_Inventory">Bags</string>
    <string name="navigation_fab">Refresh</string>
    <string name="item_level_prefix">Required Level:</string>
    <string name="item_binding_prefix">Bind to:</string>
    <string name="item_price_title">Prices</string>
    <string name="item_buy_price_title">Buy Price</string>
    <string name="item_sell_price_title">Sell Price</string>
    <string name="item_total_buy_price_title">Total Buy Price</string>
    <string name="item_total_sell_price_title">Total Sell Price</string>
</resources>