<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="82dp"
        android:layout_height="95dp"
        android:background="@color/md_theme_light_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/storage_item_rarity"
            android:layout_width="82dp"
            android:layout_height="82dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/storage_item_img"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:contentDescription="@string/storage_img_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/storage_item_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:shadowColor="@color/md_theme_dark_shadow"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:shadowRadius="6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/storage_item_price_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/storage_item_gold_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/storage_item_gold_img" />

            <ImageView
                android:id="@+id/storage_item_gold_img"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/storage_gold_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/storage_item_silver_amount" />

            <TextView
                android:id="@+id/storage_item_silver_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/storage_item_silver_img" />

            <ImageView
                android:id="@+id/storage_item_silver_img"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/storage_silver_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/storage_item_copper_amount" />

            <TextView
                android:id="@+id/storage_item_copper_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/storage_item_copper_img" />

            <ImageView
                android:id="@+id/storage_item_copper_img"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:contentDescription="@string/storage_copper_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/storage_item_not_sellable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="11sp"
            android:text="@string/storage_not_sellable"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>